<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textViewSubject_String"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:text="@string/subject"
        android:focusable="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <EditText
        android:id="@+id/textViewCourse_subject"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"

        android:inputType="text"

        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewInstructor_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_margin="8dp"
            android:text="@string/instructor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/textViewCourse_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCredits_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_margin="8dp"
            android:text="@string/credits"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/textViewCourse_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewsSchedule_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_margin="8dp"
            android:text="@string/schedule"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/textViewCourse_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />


    </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/textViewGrade_String"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:focusable="false"
           android:layout_margin="8dp"
           android:text="@string/grade"
           android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

       <EditText
           android:id="@+id/textViewCourse_grade"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"

           android:layout_margin="8dp"
           android:inputType="text"
           android:textAppearance="@style/TextAppearance.AppCompat.Small"
           android:textStyle="italic" />


   </LinearLayout>



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:id="@+id/textViewId_String"
           android:layout_width="wrap_content"

           android:layout_height="wrap_content"
           android:focusable="false"
           android:layout_margin="8dp"
           android:text="@string/id"
           android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

       <EditText
           android:id="@+id/textViewCourse_id"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:focusable="false"
           android:layout_margin="8dp"
           android:textAppearance="@style/TextAppearance.AppCompat.Small" />



   </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"
        android:onClick="updateButtonOnClick"
        android:text="@string/update"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

</LinearLayout>

</LinearLayout>