<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSubject2_String"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_margin="8dp"
            android:text="@string/subject"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/textViewCourse2_subject"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:inputType="text"

            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewInstructor2_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_margin="8dp"
            android:text="@string/instructor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/textViewCourse2_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewCredits2_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_margin="8dp"
            android:text="@string/credits"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/textViewCourse2_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewsSchedule2_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_margin="8dp"
            android:text="@string/schedule"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/textViewCourse2_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewGrade2_String"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            android:focusable="false"
            android:text="@string/grade"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/textViewCourse2_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_margin="8dp"

            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewId2_String"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"


            android:layout_margin="8dp"
            android:text="@string/id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/textViewCourse2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:focusable="false"

            android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:onClick="addButtonOnClick"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"

            />

    </LinearLayout>


</LinearLayout>